{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 492,
  "lineage": "e4700c12-62cb-6ae4-96ca-7ab3e50eaeec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myEip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c642b2a83b695fad",
            "association_id": "eipassoc-0b5e7708e5845a86a",
            "domain": "vpc",
            "id": "eipalloc-0c642b2a83b695fad",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0fc1a3fc05351b010",
            "private_dns": "ip-10-0-1-232.ap-south-1.compute.internal",
            "private_ip": "10.0.1.232",
            "public_dns": "ec2-13-200-162-23.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.162.23",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-Eip-1"
            },
            "tags_all": {
              "Name": "my-Eip-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backendInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ccc81de02c63a5e5",
            "arn": "arn:aws:ec2:ap-south-1:292152202882:instance/i-0bd76feb83e539295",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bd76feb83e539295",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "backendKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ac22f21648a2b415",
            "private_dns": "ip-10-0-2-225.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dfe48988aa819fdb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-004367913b4b96d5a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-008789942e3c85a3e",
            "tags": {
              "Name": "backend-instance-1"
            },
            "tags_all": {
              "Name": "backend-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-004367913b4b96d5a"
            ]
          },
          "dependencies": [
            "aws_ami_copy.backend_ami",
            "aws_security_group.backendSecurityGroup",
            "aws_subnet.myPrivateSubnet",
            "aws_vpc.myVPC01",
            "data.aws_ami.backend_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontendInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f2867c105aec3bb1",
            "arn": "arn:aws:ec2:ap-south-1:292152202882:instance/i-0812c5b2bca30efce",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0812c5b2bca30efce",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "frontendKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-079c783ca253187a3",
            "private_dns": "ip-10-0-1-247.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.247",
            "public_ip": "13.126.61.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0978ae29da21abba3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ae7409aa1d80a9e1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027a5db34195c7882",
            "tags": {
              "Name": "frontend-instance-1"
            },
            "tags_all": {
              "Name": "frontend-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ae7409aa1d80a9e1"
            ]
          },
          "dependencies": [
            "aws_ami_copy.frontend_ami",
            "aws_security_group.frontendSecurityGroup",
            "aws_subnet.myPublicSubnet",
            "aws_vpc.myVPC01",
            "data.aws_ami.frontend_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myIgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:292152202882:internet-gateway/igw-06b09cbb244b361df",
            "id": "igw-06b09cbb244b361df",
            "owner_id": "292152202882",
            "tags": {
              "Name": "my-new-igw"
            },
            "tags_all": {
              "Name": "my-new-igw"
            },
            "vpc_id": "vpc-03d2cbde6e7f48ee7"
          },
          "dependencies": [
            "aws_vpc.myVPC01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend_nlb_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:292152202882:loadbalancer/net/backendNlb1/f941e8bb5f9b09f1",
            "arn_suffix": "net/backendNlb1/f941e8bb5f9b09f1",
            "dns_name": "backendNlb1-f941e8bb5f9b09f1.elb.ap-south-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:292152202882:loadbalancer/net/backendNlb1/f941e8bb5f9b09f1",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "backendNlb1",
            "security_groups": [
              "sg-0db6e70a154d4db03"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-008789942e3c85a3e"
              }
            ],
            "subnets": [
              "subnet-008789942e3c85a3e"
            ],
            "tags": {
              "Name": "backend-nlb-1"
            },
            "tags_all": {
              "Name": "backend-nlb-1"
            },
            "vpc_id": "vpc-03d2cbde6e7f48ee7",
            "zone_id": "ZVDDRBQ08TROA"
          },
          "dependencies": [
            "aws_security_group.nlb_sg",
            "aws_subnet.myPrivateSubnet",
            "aws_vpc.myVPC01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_nlb_1_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:292152202882:listener/net/backendNlb1/f941e8bb5f9b09f1/a41259c9393d05d8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:292152202882:targetgroup/tf-20231222062938864600000001/3bd704b366416456",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:292152202882:listener/net/backendNlb1/f941e8bb5f9b09f1/a41259c9393d05d8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:292152202882:loadbalancer/net/backendNlb1/f941e8bb5f9b09f1",
            "mutual_authentication": [],
            "port": 8000,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.backend_nlb_1",
            "aws_lb_target_group.backend_nlb_target_group",
            "aws_security_group.nlb_sg",
            "aws_subnet.myPrivateSubnet",
            "aws_vpc.myVPC01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_nlb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:292152202882:targetgroup/tf-20231222062938864600000001/3bd704b366416456",
            "arn_suffix": "targetgroup/tf-20231222062938864600000001/3bd704b366416456",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "port": "8000",
                "protocol": "TCP",
                "timeout": 60,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:292152202882:targetgroup/tf-20231222062938864600000001/3bd704b366416456",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20231222062938864600000001",
            "name_prefix": "tf-",
            "port": 8000,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "backend_nlb_target_group"
            },
            "tags_all": {
              "Name": "backend_nlb_target_group"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03d2cbde6e7f48ee7"
          },
          "dependencies": [
            "aws_vpc.myVPC01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "myNatGw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c642b2a83b695fad",
            "association_id": "eipassoc-0b5e7708e5845a86a",
            "connectivity_type": "public",
            "id": "nat-019f5240b6e5be619",
            "network_interface_id": "eni-0fc1a3fc05351b010",
            "private_ip": "10.0.1.232",
            "public_ip": "13.200.162.23",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-027a5db34195c7882",
            "tags": {
              "Name": "my-NGW-1"
            },
            "tags_all": {
              "Name": "my-NGW-1"
            }
          },
          "dependencies": [
            "aws_eip.myEip1",
            "aws_subnet.myPublicSubnet",
            "aws_vpc.myVPC01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myPrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:292152202882:route-table/rtb-0c31808299686e5e3",
            "id": "rtb-0c31808299686e5e3",
            "owner_id": "292152202882",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-019f5240b6e5be619",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "local",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "my-private-route-table-1"
            },
            "tags_all": {
              "Name": "my-private-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d2cbde6e7f48ee7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.myEip1",
            "aws_nat_gateway.myNatGw",
            "aws_subnet.myPublicSubnet",
            "aws_vpc.myVPC01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myPublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:292152202882:route-table/rtb-05801d60caaec40a2",
            "id": "rtb-05801d60caaec40a2",
            "owner_id": "292152202882",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b09cbb244b361df",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-public-route-table-1"
            },
            "tags_all": {
              "Name": "my-public-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d2cbde6e7f48ee7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myIgw",
            "aws_vpc.myVPC01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateRTAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0913956fa37544430",
            "route_table_id": "rtb-0c31808299686e5e3",
            "subnet_id": "subnet-008789942e3c85a3e"
          },
          "dependencies": [
            "aws_eip.myEip1",
            "aws_nat_gateway.myNatGw",
            "aws_route_table.myPrivateRT",
            "aws_subnet.myPrivateSubnet",
            "aws_subnet.myPublicSubnet",
            "aws_vpc.myVPC01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd99050e920493cd",
            "route_table_id": "rtb-0c31808299686e5e3",
            "subnet_id": "subnet-0a7d8e4155cd3aae4"
          },
          "dependencies": [
            "aws_eip.myEip1",
            "aws_nat_gateway.myNatGw",
            "aws_route_table.myPrivateRT",
            "aws_subnet.myPrivateSubnet",
            "aws_subnet.myPublicSubnet",
            "aws_vpc.myVPC01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicRTAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032d1ff4b9d2c7c46",
            "route_table_id": "rtb-05801d60caaec40a2",
            "subnet_id": "subnet-027a5db34195c7882"
          },
          "dependencies": [
            "aws_internet_gateway.myIgw",
            "aws_route_table.myPublicRT",
            "aws_subnet.myPublicSubnet",
            "aws_vpc.myVPC01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backendSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:292152202882:security-group/sg-004367913b4b96d5a",
            "description": "Security Group for backend-instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004367913b4b96d5a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "backend-security-group",
            "name_prefix": "",
            "owner_id": "292152202882",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend-security-group"
            },
            "tags_all": {
              "Name": "backend-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d2cbde6e7f48ee7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "databaseSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:292152202882:security-group/sg-0d87b057f96e1208c",
            "description": "Security Group for database-instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d87b057f96e1208c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database-security-group",
            "name_prefix": "",
            "owner_id": "292152202882",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database-security-group"
            },
            "tags_all": {
              "Name": "database-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d2cbde6e7f48ee7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontendSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:292152202882:security-group/sg-0ae7409aa1d80a9e1",
            "description": "Security Group for frontend-instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae7409aa1d80a9e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "frontend-security-group",
            "name_prefix": "",
            "owner_id": "292152202882",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend-security-group"
            },
            "tags_all": {
              "Name": "frontend-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d2cbde6e7f48ee7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nlb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:292152202882:security-group/sg-0db6e70a154d4db03",
            "description": "Security group for nlb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db6e70a154d4db03",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "nlbSg",
            "name_prefix": "",
            "owner_id": "292152202882",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03d2cbde6e7f48ee7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myPrivateSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:292152202882:subnet/subnet-008789942e3c85a3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008789942e3c85a3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "292152202882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-new-private-subnet-1"
            },
            "tags_all": {
              "Name": "my-new-private-subnet-1"
            },
            "vpc_id": "vpc-03d2cbde6e7f48ee7"
          },
          "dependencies": [
            "aws_vpc.myVPC01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:292152202882:subnet/subnet-0a7d8e4155cd3aae4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7d8e4155cd3aae4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "292152202882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-new-private-subnet-2"
            },
            "tags_all": {
              "Name": "my-new-private-subnet-2"
            },
            "vpc_id": "vpc-03d2cbde6e7f48ee7"
          },
          "dependencies": [
            "aws_vpc.myVPC01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myPublicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:292152202882:subnet/subnet-027a5db34195c7882",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027a5db34195c7882",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "292152202882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-new-public-subnet-1"
            },
            "tags_all": {
              "Name": "my-new-public-subnet-1"
            },
            "vpc_id": "vpc-03d2cbde6e7f48ee7"
          },
          "dependencies": [
            "aws_vpc.myVPC01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVPC01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:292152202882:vpc/vpc-03d2cbde6e7f48ee7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d6db406566e49dd8",
            "default_route_table_id": "rtb-00a32df4b3dad712b",
            "default_security_group_id": "sg-0cf6ce310361ff787",
            "dhcp_options_id": "dopt-08d1e93c18c8084aa",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03d2cbde6e7f48ee7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00a32df4b3dad712b",
            "owner_id": "292152202882",
            "tags": {
              "Name": "my-vpc-01"
            },
            "tags_all": {
              "Name": "my-vpc-01"
            }
          }
        }
      ]
    }
  ]
}